Remove Travelshop-Namespace & Bugfix Layout Shift

--- a/assets/scss/components/_price-box.scss
+++ b/assets/scss/components/_price-box.scss
@@ -1,4 +1,4 @@
-.travelshop-price-box {
+.price-box {
     padding: 1rem 0;
     position: relative;
     transform: scale(1);
